--- a/projects/projects.css
+++ b/projects/projects.css
@@ -144,8 +144,13 @@ nav{display:flex; background-color:inherit; }
 .cards {display: flex; margin-top: 20px;justify-content: center;flex-wrap: wrap;gap: 25px;}
 .cardWhite {max-width: 250px;background: var(--white);box-shadow: 0 0 16px var(0, 0, 0,0.1);
         text-align: center;border-radius: 5px;padding: 25px;}
-.cardWhite p {height: 250px;font-size: 20px;color: var(--gray);}
+.cardWhite p {max-height: 250px;overflow-y:auto;overflow-x:hidden;color: var(--gray);}
 .cardWhite img {max-width: 250px;height: 150px;border-radius: 5px;}
+
+.cardWhite p::-webkit-scrollbar{width: 8px;}
+.cardWhite p::-webkit-scrollbar-track {opacity: 0;}
+.cardWhite p::-webkit-scrollbar-thumb {background: #333;border-radius: 10px;  }
+.cardWhite p::-webkit-scrollbar-thumb:hover {background: #555;}
 
         /* Buttons */
 
